# Friday

./: .gitignore  Cargo.toml  Makefile  NEXT_STEPS.md  PROGRESS_SUMMARY.md  QUICKSTART.md  QUICK_START_GUIDE.md  README.md  SETUP_COMPLETE.md  WHY_NOTHING_HAPPENS.md  demo_output.txt  justfile  rust-toolchain.toml  start_friday.sh  test_audio_simple.sh  test_microphone.sh  test_voice_assistant.sh
.cargo/: config.toml
.github/workflows/: ci.yml
assistant-cli/: Cargo.toml
assistant-cli/src/: main.rs
assistant-core/: Cargo.toml
assistant-core/src/: advanced_config.rs  analytics.rs  audio.rs  audio_wake.rs  config.rs  dialogue_manager.rs  enhanced_executor.rs  enhanced_nlu.rs  lib.rs  memory_manager.rs  plugin_executor.rs  plugin_system.rs  realtime_wake.rs  recording_asr.rs  streaming_asr.rs  voice_training.rs
assistant-ui/: Cargo.toml  tauri.conf.json
assistant-ui/src/: main.rs
assistant-ui/ui/: index.html
piper_env/: pyvenv.cfg
scripts/: dev.sh  setup.sh
