[package]
name = "assistant-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
assistant-core = { path = "../assistant-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
serde_json = "1"


